--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "axios": "^1.13.2",
     "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.29",
     "expo-camera": "~17.0.10",
@@ -22,8 +24,6 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.15",
-    "nativewind": "~4.1.23",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -34,7 +34,6 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets-core": "^1.6.2",
-    "tailwindcss": "^3.4.19",
     "zustand": "^5.0.9"
   },
   "private": true,
