--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "curso-react-native-midudev",
+    "name": "Abordaje QR",
     "slug": "curso-react-native-midudev",
     "schema": "metacritic",
     "version": "1.0.0",
@@ -28,10 +28,7 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "plugins": [
-      "expo-router",
-      "expo-secure-store"
-    ],
+    "plugins": ["expo-router", "expo-secure-store"],
     "extra": {
       "router": {},
       "eas": {
